# gittite

./: .eslintrc.cjs  .gitignore  README-frontend.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vue.config.js
src/: App.vue  main.ts  quasar-user-options.js
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: app_data.rs  args.rs  cmd.rs  main.rs  menu.rs  settings.rs  tests.rs
src-tauri/src/git_api/: add.rs  addremove.rs  blame.rs  branch.rs  clone.rs  commit.rs  commit_files.rs  commit_info.rs  commit_revert.rs  commits_info.rs  cred.rs  diff.rs  diff2.rs  error.rs  fetch.rs  ignore.rs  init.rs  ls-remote.rs  mod.rs  open.rs  progress.rs  remote.rs  repository.rs  reset.rs  rev_list.rs  rev_parse.rs  revlog.rs  stage.rs  stash.rs  state.rs  status.rs  tag.rs  utils.rs
src-tauri/src/git_api/branch/: mod.rs
src-tauri/src/git_api/remotes/: callbacks.rs  fetch.rs  mod.rs  push.rs  tags.rs
src-tauri/tests/: git-command.txt
src/api/: git2rs.ts  types.ts
src/assets/: app.css
src/components/: ChangesList.vue  ChangesOption.vue  CommitMessage.vue  ContentForChanges.vue  ContentForHistory.vue  DialogError.vue  DiffView.vue  HistoryList.vue  HistoryListRow.vue  OctIcon.vue  OctStatusIcon.vue  PathLabel.vue  ProgressDialog.js  RelativeTime.vue  RemoteProgress.vue  RepositoryItem.vue  SetLayout.vue  TheWelcome.vue
src/components/changes/: ChangedFileDetails.vue  ChangesList.vue  ChangesOption.vue  CommitMessage.vue  ContentForChanges.vue  NoChanges.vue  StashedChanges.vue  UndoCommit.vue
src/components/dialog/: AddLocalRepository.vue  BranchCreate.vue  BranchDelete.vue  BranchRename.vue  BranchReset.vue  BranchSwitch.vue  CloneRepository.vue  InitRepository.vue  Preference.vue  ProgressDialog.vue  RepoSettings.vue  SFCDialog.vue  VModelComputed.vue
src/components/diff/: DiffOptions.vue
src/components/history/: CommitFileList.vue  CommitSummary.vue  ContentForHistory.vue  HistoryList.vue  HistoryListItem.vue
src/components/preference/: Profile.vue
src/components/toolbar/: PushPullBtn.vue  SetLayout.vue  ToolBar2.vue
src/components/toolbar/dev/: ToolBar.vue
src/layouts/: AppLayout.vue  DevLayout.vue  ToolBar.vue  ToolBar2.vue
src/layouts/dev/: ToolBar.vue
src/lib/: format-date.ts  format-relative.ts  git2rs.ts  validateBranchName.ts
src/mixins/: dialog.ts  modal.ts
src/models/: branch.ts  commit.ts  diff.ts  repository.ts  settings.ts  stash-entry.ts  status.ts  tag.ts
src/router/: index.ts
src/store/: layout.js
src/stores/: app.ts  commit-stage.ts  commitStage.ts  history.ts  layout.js  props.ts  repository.ts  settings.ts
src/tests/: README.md  imports.test.ts  invoke-simple.test.ts
src/tests/fixtures/: repo-with-many-commits.ts  test-repo.json  test-repo.ts
src/tests/helpers/: fakeInvoke.ts  repositories.ts  temp.ts
src/tests/unit/: create-branch.test.ts  repository-store.test.ts  workspace.test.ts
src/tests/unit/git/: commit.test.ts
src/views/: AboutView.vue  AppView.vue  HomeView.vue  SelectRepository.vue  Test.vue  WorkSpace.vue
src/views/gitcmd/: AddRemove.vue  Blame.vue  Branch.vue  Clone.vue  Commit.vue  Diff.vue  Init.vue  Logs.vue  Remote.vue  Repo.vue  Settings.vue  Stage.vue  Stash.vue  Status.vue  Tags.vue
