[package]
name = "gittite"
version = "0.3.0"
description = "Git client based on Tauri"
authors = ["seoyoungjin"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "devtools"] }
git2 = "0.16.1"
thiserror = "1.0.38"
atomicwrites = "0.3.1"
rfd = "0.10.0"
structopt = "0.3.26"
log = "0.4.17"
env_logger = "0.10.0"
unicode-truncate = "0.2.0"
serial_test = "1.0.0"
url = "2.3.1"
serde_with = "2.2.0"
clap = { version = "4.1.4", features = [ "derive" ] }
filetime = "0.2.19"

[dev-dependencies]
tempfile = "3.3.0"

[target."cfg(any(target_os = \"linux\"))".dependencies]
webkit2gtk = { version = "0.18.2", features = [ "v2_22" ] }
webkit2gtk-sys = "0.18"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2.7"

[target."cfg(target_os = \"windows\")".dependencies]
webview2-com = "0.19.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
